--- a/src/client/themes/warm-light.css
+++ b/src/client/themes/warm-light.css
@@ -11,7 +11,7 @@
 
   /* Text */
   --color-text-primary: #2c2416;
-  --color-text-secondary: #7a6c56;
+  --color-text-secondary: #5c5040;
   --color-text-tertiary: #a89878;
   --color-text-inverse: #fdf8f0;
   --color-text-link: #b06820;
